--- a/exercise0_ml_review.ipynb
+++ b/exercise0_ml_review.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*your answer here*"
+    "hyperparameters are parameters that influence your model, but cannot be directly solved for. This makes them difficult to identify, and can greatly influence the success of a classifier. standard parameters such as wieght vectors can be optimized to find the best solution for your data. hyperparameters do not have a objective function."
    ]
   },
   {
@@ -178,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
