--- a/exercise0_ml_review.ipynb
+++ b/exercise0_ml_review.ipynb
@@ -253,15 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "guassian classifier:  {'C': 10, 'gamma': 0.0001}\n",
-      "linear classifier:  {'C': 0.1}\n"
+      "guassian classifier:  {'C': 1, 'gamma': 0.001}\n",
+      "linear classifier:  {'C': 0.001}\n",
+      "guassian accuracy:  0.9875\n",
+      "linear accuracy:  0.9714285714285715\n"
      ]
     }
    ],
@@ -276,7 +278,7 @@
     " ]\n",
     "\n",
     "param_grid_linear = [\n",
-    "  {'C': [0.001, 0.01, 0.1, 1, 10, 100, 1000]}\n",
+    "  {'C': [0.0001, 0.001, 0.01, 0.1, 1, 10, 100, 1000]}\n",
     " ]\n",
     "\n",
     "gaussian = GridSearchCV(svm.SVC(kernel='rbf'), param_grid_gaussian, cv=cv)\n",
