--- a/InClass.ipynb
+++ b/InClass.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import random"
    ]
   },
   {
@@ -104,6 +105,128 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 2/6/2025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a bunch of biology today, which I already know "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DNA Sequences:\n",
+      "['GGGCGCACGGCG', 'GTCTAGCACGCT', 'TGAGTCTTGACC', 'TATAGAGGTAGC', 'CCGCGCATACGA']\n",
+      "Profiles:\n",
+      "[[0.11111111 0.22222222 0.22222222 0.22222222 0.22222222 0.22222222\n",
+      "  0.33333333 0.22222222 0.22222222 0.33333333 0.11111111 0.22222222]\n",
+      " [0.22222222 0.22222222 0.22222222 0.33333333 0.11111111 0.44444444\n",
+      "  0.22222222 0.22222222 0.22222222 0.22222222 0.44444444 0.33333333]\n",
+      " [0.33333333 0.33333333 0.33333333 0.22222222 0.44444444 0.22222222\n",
+      "  0.22222222 0.22222222 0.33333333 0.33333333 0.33333333 0.22222222]\n",
+      " [0.33333333 0.22222222 0.22222222 0.22222222 0.22222222 0.11111111\n",
+      "  0.22222222 0.33333333 0.22222222 0.11111111 0.11111111 0.22222222]]\n",
+      "Scores:\n",
+      "[np.float64(1.9823422400357346e-06), np.float64(6.526229596825463e-08), np.float64(6.607807466785781e-07), np.float64(1.4684016592857292e-07), np.float64(4.405204977857186e-07)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Finding Transcription factor binding motifs\n",
+    "# What is a good motif\n",
+    "\n",
+    "# Consensus string:\n",
+    "# the sring that represents the most frequent character in a postion\n",
+    "# A simple score would be to count the deviations from the consensus\n",
+    "\n",
+    "# Motif Finding \n",
+    "# input: dna, a collection of t strings of len n and an interger k\n",
+    "# output: A collection of k-mers, one from each string in DNA minimizing their score\n",
+    "\n",
+    "# Apply an optimizaiton problem \n",
+    "\n",
+    "# Possible choices of k-mers, each of t strings in DNA has n-k+1 k-mer starting pos\n",
+    "# and so there are (n-k+1)^t ~ n^t possible \n",
+    "\n",
+    "# this makes it not doable to brute force.\n",
+    "\n",
+    "# NP-Complete (non-polynomial time problems, hint n^t)\n",
+    "# Randomized Algorithms (example: Monte Carlo Methods)\n",
+    "\n",
+    "# Profile Matrix, Probablility based on the number of occurance in the input DNA\n",
+    "\n",
+    "# Random Starting Motifs -> Profile(Motifs) -> Motifs(Profile(Motifs))\n",
+    "#        k-mer string       Probability of nucletides       probablility of string         do this iteratively until max\n",
+    "\n",
+    "# 0 are not allowed because it cause probilities to get destroyed\n",
+    "# solution: Pseudocounts (add 1 nuc tide to each position) \n",
+    "\n",
+    "# Randomly generate DNA\n",
+    "def generate_random_dna(length):\n",
+    "    return ''.join(random.choice('ATCG') for _ in range(length))\n",
+    "\n",
+    "def generate_dna_list(R, C):\n",
+    "    return [generate_random_dna(C) for _ in range(R)]\n",
+    "\n",
+    "R, C = 5, 12\n",
+    "dna = generate_dna_list(R, C)\n",
+    "\n",
+    "print('DNA Sequences:')\n",
+    "print(dna)\n",
+    "\n",
+    "# Calculate the Profile\n",
+    "def calc_profile(dna):\n",
+    "    # count the occurrence of a nucleotide in each position\n",
+    "    profile = np.zeros((4, C), dtype=int)\n",
+    "    nucleotide_index = {'A': 0, 'C': 1, 'G': 2, 'T': 3}\n",
+    "    for seq in dna:\n",
+    "        for i, nucleotide in enumerate(seq):\n",
+    "            profile[nucleotide_index[nucleotide]][i] += 1\n",
+    "\n",
+    "    profile += np.ones_like(profile) # Pseudocounts\n",
+    "\n",
+    "    # calculate the probablities\n",
+    "    denominator = np.sum(profile, axis=0)\n",
+    "    profile = np.divide(profile, denominator)\n",
+    "    return profile\n",
+    "\n",
+    "print('Profiles:')\n",
+    "print(profile := calc_profile(dna))\n",
+    "\n",
+    "# calculate the probablity of each dna base on the profile\n",
+    "def calc_score(dna, profile):\n",
+    "        nucleotide_index = {'A': 0, 'C': 1, 'G': 2, 'T': 3}\n",
+    "        scores = []\n",
+    "        for seq in dna:\n",
+    "            score = 1\n",
+    "            for i, nucleotide in enumerate(seq):\n",
+    "                score *= profile[nucleotide_index[nucleotide]][i]\n",
+    "            scores.append(score)\n",
+    "        return scores\n",
+    "\n",
+    "print('Scores:')\n",
+    "print(score := calc_score(dna,profile))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -123,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
