--- a/assignment1_ml_for_protein_sequences.ipynb
+++ b/assignment1_ml_for_protein_sequences.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from Bio import SeqIO"
    ]
   },
   {
@@ -71,8 +72,8 @@
     {
      "data": {
       "text/plain": [
-       "<2x5 sparse array of type '<class 'numpy.float64'>'\n",
-       "\twith 0 stored elements in Dictionary Of Keys format>"
+       "<Dictionary Of Keys sparse array of dtype 'float64'\n",
+       "\twith 0 stored elements and shape (2, 5)>"
       ]
      },
      "execution_count": 2,
@@ -105,8 +106,8 @@
     {
      "data": {
       "text/plain": [
-       "<2x5 sparse array of type '<class 'numpy.float64'>'\n",
-       "\twith 2 stored elements in Dictionary Of Keys format>"
+       "<Dictionary Of Keys sparse array of dtype 'float64'\n",
+       "\twith 2 stored elements and shape (2, 5)>"
       ]
      },
      "execution_count": 3,
@@ -167,8 +168,8 @@
     {
      "data": {
       "text/plain": [
-       "<2x5 sparse array of type '<class 'numpy.float64'>'\n",
-       "\twith 2 stored elements in Compressed Sparse Row format>"
+       "<Compressed Sparse Row sparse array of dtype 'float64'\n",
+       "\twith 2 stored elements and shape (2, 5)>"
       ]
      },
      "execution_count": 5,
@@ -200,7 +201,8 @@
       "text/html": [
        "<style>#sk-container-id-1 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
-       "  --sklearn-color-text: black;\n",
+       "  --sklearn-color-text: #000;\n",
+       "  --sklearn-color-text-muted: #666;\n",
        "  --sklearn-color-line: gray;\n",
        "  /* Definition of color scheme for unfitted estimators */\n",
        "  --sklearn-color-unfitted-level-0: #fff5e6;\n",
@@ -345,12 +347,21 @@
        "/* Toggleable label */\n",
        "#sk-container-id-1 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
-       "  display: block;\n",
+       "  display: flex;\n",
        "  width: 100%;\n",
        "  margin-bottom: 0;\n",
        "  padding: 0.5em;\n",
        "  box-sizing: border-box;\n",
        "  text-align: center;\n",
+       "  align-items: start;\n",
+       "  justify-content: space-between;\n",
+       "  gap: 0.5em;\n",
+       "}\n",
+       "\n",
+       "#sk-container-id-1 label.sk-toggleable__label .caption {\n",
+       "  font-size: 0.6rem;\n",
+       "  font-weight: lighter;\n",
+       "  color: var(--sklearn-color-text-muted);\n",
        "}\n",
        "\n",
        "#sk-container-id-1 label.sk-toggleable__label-arrow:before {\n",
@@ -503,7 +514,8 @@
        "  height: 1em;\n",
        "  width: 1em;\n",
        "  text-decoration: none !important;\n",
-       "  margin-left: 1ex;\n",
+       "  margin-left: 0.5em;\n",
+       "  text-align: center;\n",
        "  /* unfitted */\n",
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-unfitted-level-1);\n",
@@ -602,7 +614,7 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;SVC<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>SVC()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>SVC</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>SVC()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
        "SVC()"
@@ -661,8 +673,112 @@
    "execution_count": null,
    "id": "5e6a7028",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d2nn5a1\n",
+      "mkdtfrlenqtiyfgteraisaspqtiwryltetdklkqwfpeleigelgvngfwrfilpdfeetmpftdyaeekylgvtwdtgiiyfdlkeqaphqtllvfseslpenfttprhkdiagwsivlnrlkqvvetpdaapekidfpqienhylekltnlen\n",
+      "d2nn5a1 d.129.3.5 (A:1-160) Hypothetical protein EF2215 {Enterococcus faecalis [TaxId: 1351]}\n",
+      "d.129.3.5\n",
+      "Number of sequences: 35494\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load in data\n",
+    "path = r'C:\\Users\\Jack\\Documents\\GitHub\\CS525-Bioinformatics\\astral-scopedom-seqres-gd-sel-gs-bib-95-2.08.fa'\n",
+    "fasta_sequences = SeqIO.parse(open(path),'fasta')\n",
+    "\n",
+    "names = []\n",
+    "sequences = []\n",
+    "descriptions = []\n",
+    "scop = []\n",
+    "for fasta in fasta_sequences:\n",
+    "    name, sequence, description = fasta.id, str(fasta.seq), str(fasta.description)\n",
+    "    names.append(name)\n",
+    "    sequences.append(sequence)\n",
+    "    descriptions.append(description)\n",
+    "    scop.append(description.split(' ')[1])\n",
+    "\n",
+    "\n",
+    "i = 30000\n",
+    "print(names[i])\n",
+    "print(sequences[i])\n",
+    "print(descriptions[i])\n",
+    "print(scop[i])\n",
+    "num_seq = len(sequences)\n",
+    "print(f'Number of sequences: {num_seq}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "952211b2",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# filter data so that 'c.2.1.2' and 'c.2.1.0' are the only proteins\n",
+    "cls_types = ['c.2.1.2', 'c.2.1.0']\n",
+    "Y = []\n",
+    "good_index = []\n",
+    "\n",
+    "for i, cls in enumerate(scop):\n",
+    "    if cls in cls_types:\n",
+    "        Y.append(cls_types.index(cls))\n",
+    "        good_index.append(i)\n",
+    "\n",
+    "names = [names[i] for i in good_index]\n",
+    "sequences = [sequences[i] for i in good_index]\n",
+    "descriptions = [descriptions[i] for i in good_index]\n",
+    "scop = [scop[i] for i in good_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3be96404",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All kmers: 147980\n",
+      "unique set of kmers: 7554\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate the set of kmers\n",
+    "k = 3\n",
+    "kmers = [S[i:i+k] for S in sequences for i in range(len(S) - k + 1)] # Note: for loops go from outside loop to inside\n",
+    "print(f'All kmers: {len(kmers)}')\n",
+    "kmers = set(kmers)\n",
+    "num_kmers = len(kmers)\n",
+    "print(f'unique set of kmers: {num_kmers}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "225d204a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "# count the number of occurances of each kmer (sparse matrix)\n",
+    "X = sparse.dok_array((num_seq, num_kmers))\n",
+    "\n",
+    "kmer_index = {kmer: idx for idx, kmer in enumerate(kmers)}\n",
+    "\n",
+    "for i_s, S in enumerate(sequences):\n",
+    "    kmer_counts = Counter([S[i:i+k] for i in range(len(S) - k + 1)]) # I wrote a crappy algorithm I then asked chat gpt and it made this\n",
+    "    for kmer, count in kmer_counts.items():                          # and its so much faster\n",
+    "        X[i_s, kmer_index[kmer]] = count\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -675,6 +791,14 @@
     "Is there a kernel that seems to work better?  Use it for the rest of your experiments.\n",
     "Finally, compare your SVM results with a random forests classifier."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af07bfab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -717,7 +841,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -731,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
