--- a/InClass.ipynb
+++ b/InClass.ipynb
@@ -223,11 +223,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I lost 2/11/25 sadly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2/13/25"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Neural networks\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -246,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
