--- a/InClass.ipynb
+++ b/InClass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "np.int64(6)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -128,18 +128,18 @@
      "output_type": "stream",
      "text": [
       "DNA Sequences:\n",
-      "['GGGCGCACGGCG', 'GTCTAGCACGCT', 'TGAGTCTTGACC', 'TATAGAGGTAGC', 'CCGCGCATACGA']\n",
+      "['AGCAGCCTACTT', 'TCAGTGTCCTTG', 'CCCGGTGGATCT', 'TCAAATGTACAT', 'AGTGACTCTCCC']\n",
       "Profiles:\n",
-      "[[0.11111111 0.22222222 0.22222222 0.22222222 0.22222222 0.22222222\n",
-      "  0.33333333 0.22222222 0.22222222 0.33333333 0.11111111 0.22222222]\n",
-      " [0.22222222 0.22222222 0.22222222 0.33333333 0.11111111 0.44444444\n",
-      "  0.22222222 0.22222222 0.22222222 0.22222222 0.44444444 0.33333333]\n",
-      " [0.33333333 0.33333333 0.33333333 0.22222222 0.44444444 0.22222222\n",
-      "  0.22222222 0.22222222 0.33333333 0.33333333 0.33333333 0.22222222]\n",
-      " [0.33333333 0.22222222 0.22222222 0.22222222 0.22222222 0.11111111\n",
-      "  0.22222222 0.33333333 0.22222222 0.11111111 0.11111111 0.22222222]]\n",
+      "[[0.33333333 0.11111111 0.33333333 0.33333333 0.33333333 0.11111111\n",
+      "  0.11111111 0.11111111 0.44444444 0.11111111 0.22222222 0.11111111]\n",
+      " [0.22222222 0.44444444 0.33333333 0.11111111 0.11111111 0.33333333\n",
+      "  0.22222222 0.33333333 0.22222222 0.44444444 0.33333333 0.22222222]\n",
+      " [0.11111111 0.33333333 0.11111111 0.44444444 0.33333333 0.22222222\n",
+      "  0.33333333 0.22222222 0.11111111 0.11111111 0.11111111 0.22222222]\n",
+      " [0.33333333 0.11111111 0.22222222 0.11111111 0.22222222 0.33333333\n",
+      "  0.33333333 0.33333333 0.22222222 0.33333333 0.33333333 0.44444444]]\n",
       "Scores:\n",
-      "[np.float64(1.9823422400357346e-06), np.float64(6.526229596825463e-08), np.float64(6.607807466785781e-07), np.float64(1.4684016592857292e-07), np.float64(4.405204977857186e-07)]\n"
+      "[np.float64(2.9735133600536017e-06), np.float64(6.607807466785781e-07), np.float64(2.6431229867143125e-06), np.float64(3.964684480071469e-06), np.float64(9.911711200178673e-07)]\n"
      ]
     }
    ],
@@ -219,8 +219,87 @@
     "        return scores\n",
     "\n",
     "print('Scores:')\n",
-    "print(score := calc_score(dna,profile))\n"
+    "print(score := calc_score(dna,profile))\n",
+    "\n",
+    "# This was RandomMotifSearch"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2/11/2025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([3, 6, 1, 2, 7], ['CCC', 'CCG', 'CAC', 'CCC', 'CCC'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Gibbs Sampling\n",
+    "# Goal is to make the motif selection more accurate\n",
+    "# through stocastic \n",
+    "# select kmer by the probablity of that kmer according to a profile\n",
+    "\n",
+    "R, C = 5, 12\n",
+    "dna = generate_dna_list(R, C)\n",
+    "\n",
+    "def gibbs(Seqs, k): # Theres something wrong here\n",
+    "    \"\"\"Seqs is a list of strings. Find the best motif.\"\"\"\n",
+    "    # start with random indices\n",
+    "    I = [random.randint(0, len(x) - k) for x in Seqs]\n",
+    "    LastI = None\n",
+    "    while I != LastI: # repeat until nothing changes\n",
+    "        LastI = list(I)\n",
+    "        # iterate through every string\n",
+    "        for i in range(len(Seqs)):\n",
+    "            # compute the profile for the sequences except i\n",
+    "            P = calc_profile([\n",
+    "                    x[j : j + k] for q, (x, j) in enumerate(zip(Seqs, I))\n",
+    "                    if q != i\n",
+    "                        ])\n",
+    "            # find the place the profile matches best\n",
+    "            best = None\n",
+    "            for j in range(len(Seqs[i]) - k + 1):\n",
+    "                score = calc_score(Seqs[i][j : j + k], P)\n",
+    "                if best is None or score > best:\n",
+    "                    best = score\n",
+    "                    bestpos = j\n",
+    "            # update the ith position with the best\n",
+    "            I[i] = bestpos\n",
+    "    return I, [x[j : j + k] for x, j in zip(Seqs, I)]\n",
+    "\n",
+    "\n",
+    "print(gibbs(dna, 3))\n",
+    "\n",
+    "\n",
+    "# Information: I(p) = log(p)\n",
+    "# Entropy: H(p) = sum(p_i log(p_i)) for all outcomes i\n",
+    "# I_i = log2(4) - (- sum b=A to T(f_bi log2(f_bi)))\n",
+    "\n",
+    "# relative entropy or Kullback-Liebler divergence\n",
+    "# This takes into account background knowledge\n",
+    "# I_i = sum b=A to T(f_bi log2(f_bi/p_b))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
