--- a/02_motif_prep.ipynb
+++ b/02_motif_prep.ipynb
@@ -207,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'G'"
+       "np.str_('T')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 0])"
+       "array([0, 0, 0, 1])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "54664"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,16 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'GTTAGCTTCC'"
+       "10"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,13 +496,127 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# the goal is to build a motif logo\n",
+    "# to do this we must:\n",
+    "# grab the first 10 and last 10 characters of each sequence\n",
+    "# calculate profile\n",
+    "    # calculate count matrix (nucliotides x position)\n",
+    "    # add 1 (remove 0s) pseudocount Matrix\n",
+    "    # Calculate probablility matrix (divide by vector of sum of columns)\n",
+    "# calculate information\n",
+    "    # f is from count matrix\n",
+    "    # p is from probablity matrix\n",
+    "# calculate entropy\n",
+    "    # same as information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10\n",
+    "threePrime = [s[-n:] for s in sequences]\n",
+    "fivePrime = donor_sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54664 54664\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_seq:=len(threePrime), len(fivePrime))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def get_counts_matrix(seq:list) -> np.array: # num_nuc x n\n",
+    "    nuc_index = {'A': 0, 'T': 1, 'G': 2, 'C': 3}\n",
+    "    counts = np.zeros([len(nuc_index), len(seq[0])])\n",
+    "    for i_s, s in enumerate(seq):\n",
+    "        for i_n, n in enumerate(s):\n",
+    "            counts[nuc_index[n], i_n] += 1\n",
+    "    return counts\n",
+    "\n",
+    "threeCounts = get_counts_matrix(threePrime)\n",
+    "fiveCounts = get_counts_matrix(fivePrime)\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_profile_matrix(counts):\n",
+    "    counts += 1 # pseudo counts\n",
+    "    sums = np.sum(counts, axis=0)\n",
+    "    profile = counts/sums\n",
+    "    return profile\n",
+    "\n",
+    "threeProfile = get_profile_matrix(threeCounts)\n",
+    "fiveProfile = get_profile_matrix(fiveCounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_information_matrix(profile):\n",
+    "    I = np.zeros_like(profile)\n",
+    "    \n",
+    "    for p in range(profile.shape[1]):\n",
+    "        for n in range(profile.shape[0]):\n",
+    "            if profile[n, p] > 0:\n",
+    "                I[n, p] = np.log2(4) - (profile[n, p] * np.log2(profile[n, p]))\n",
+    "            else:\n",
+    "                I[n, p] = 0\n",
+    "    return I\n",
+    "\n",
+    "threeInformation = calculate_information_matrix(threeProfile)\n",
+    "fiveInformation = calculate_information_matrix(fiveProfile)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Create Assignment",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -516,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
