Data Loading works

--- a/assignment3_genomics_cnn.ipynb
+++ b/assignment3_genomics_cnn.ipynb
@@ -33,6 +33,152 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bebf5a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task\n",
+    "# - Load data\n",
+    "# given bed file -> convert to fasta file (example database\\AGL16_peak_seq.fasta)\n",
+    "# - Generate dataset\n",
+    "# given a fasta file -> a dataset with negative example made from postive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c809572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:7: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "<>:7: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "c:\\temp\\ipykernel_20128\\2856302313.py:7: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "  with open('database\\AGL16.target.all.bed') as f:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted 4328 sequences and saved to FASTA file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lets look at the bed files \n",
+    "from Bio import SeqIO\n",
+    "from Bio.Seq import Seq\n",
+    "from Bio.SeqRecord import SeqRecord\n",
+    "\n",
+    "positions = {}\n",
+    "with open('database\\AGL16.target.all.bed') as f:\n",
+    "    for line in f:\n",
+    "        chr, start, stop, name, score, strand, thickStart, thickEnd, itemRgb, blockcount, blockSize, blockStart, _, _ = line.split()\n",
+    "        # idk what the last two are there is only supposed to be 12 according to wikipedia\n",
+    "        positions[name] = (chr, int(start), int(stop), (int(start)+int(stop))//2)\n",
+    "\n",
+    "genome_locations = [r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.1.fa',\n",
+    "                    r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.2.fa',\n",
+    "                    r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.3.fa',\n",
+    "                    r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.4.fa',\n",
+    "                    r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.5.fa']\n",
+    "genome = {}\n",
+    "for l in genome_locations:\n",
+    "    genome = genome | SeqIO.to_dict(SeqIO.parse(open(l), 'fasta'), lambda rec: 'Chr'+rec.name)\n",
+    "\n",
+    "# Extract 500bp sequences centered at midpoints\n",
+    "sequences = []\n",
+    "for name, (chr, start, stop, mid_point) in positions.items():\n",
+    "    # Calculate the start and end positions for a 500bp sequence centered at midpoint\n",
+    "    seq_start = max(0, mid_point - 250)  # Ensure we don't go below 0\n",
+    "    seq_end = min(len(genome[chr].seq), mid_point + 250)  # Ensure we don't go beyond chromosome length\n",
+    "    \n",
+    "    # Extract the sequence\n",
+    "    sequence = genome[chr].seq[seq_start:seq_end]\n",
+    "    \n",
+    "    # Create a SeqRecord\n",
+    "    record = SeqRecord(sequence, id=name, description=f\"Chromosome {chr}, midpoint {mid_point}\")\n",
+    "    sequences.append(record)\n",
+    "\n",
+    "# Write to FASTA file\n",
+    "SeqIO.write(sequences, \"AGL16_peak_seq.fasta\", \"fasta\")\n",
+    "print(f\"Extracted {len(sequences)} sequences and saved to FASTA file.\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e4d11b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_fasta_from_genome_and_chip_data(genome_paths = [r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.1.fa',\n",
+    "                                                                r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.2.fa',\n",
+    "                                                                r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.3.fa',\n",
+    "                                                                r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.4.fa',\n",
+    "                                                                r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.5.fa'], \n",
+    "                                        bed_path='database\\AGL16.target.all.bed',\n",
+    "                                        len_of_seqs=500):\n",
+    "    \n",
+    "    positions = {}\n",
+    "    with open(bed_path) as f:\n",
+    "        for line in f:\n",
+    "            chr, start, stop, name, score, strand, thickStart, thickEnd, itemRgb, blockcount, blockSize, blockStart, _, _ = line.split()\n",
+    "            # idk what the last two are there is only supposed to be 12 according to wikipedia\n",
+    "            positions[name] = (chr, int(start), int(stop), (int(start)+int(stop))//2)\n",
+    "\n",
+    "    genome = {}\n",
+    "    for l in genome_paths:\n",
+    "        genome = genome | SeqIO.to_dict(SeqIO.parse(open(l), 'fasta'), lambda rec: 'Chr'+rec.name)\n",
+    "\n",
+    "    # Extract 500bp sequences centered at midpoints\n",
+    "    sequences = []\n",
+    "    for name, (chr, start, stop, mid_point) in positions.items():\n",
+    "        # Calculate the start and end positions for a 500bp sequence centered at midpoint\n",
+    "        seq_start = max(0, mid_point - len_of_seqs//2)  # Ensure we don't go below 0\n",
+    "        seq_end = min(len(genome[chr].seq), mid_point + len_of_seqs//2)  # Ensure we don't go beyond chromosome length\n",
+    "        \n",
+    "        # Extract the sequence\n",
+    "        sequence = genome[chr].seq[seq_start:seq_end]\n",
+    "        \n",
+    "        # Create a SeqRecord\n",
+    "        record = SeqRecord(sequence, id=name, description=f\"Chromosome {chr}, midpoint {mid_point}\")\n",
+    "        sequences.append(record)\n",
+    "\n",
+    "    # Write to FASTA file\n",
+    "    SeqIO.write(sequences, \"AGL16_peak_seq.fasta\", \"fasta\")\n",
+    "    print(f\"Extracted {len(sequences)} sequences and saved to FASTA file.\")\n",
+    "    return sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c8c490a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "2bea7438",
    "metadata": {},
@@ -180,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
