Working on assingment 3

--- a/assignment3_genomics_cnn.ipynb
+++ b/assignment3_genomics_cnn.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3bebf5a6",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2c809572",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
      "text": [
       "<>:7: SyntaxWarning: invalid escape sequence '\\A'\n",
       "<>:7: SyntaxWarning: invalid escape sequence '\\A'\n",
-      "c:\\temp\\ipykernel_20128\\2856302313.py:7: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "c:\\temp\\ipykernel_22200\\2856302313.py:7: SyntaxWarning: invalid escape sequence '\\A'\n",
       "  with open('database\\AGL16.target.all.bed') as f:\n"
      ]
     },
@@ -115,12 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9e4d11b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:8: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "<>:8: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "c:\\temp\\ipykernel_22200\\1604433860.py:8: SyntaxWarning: invalid escape sequence '\\A'\n",
+      "  bed_path='database\\AGL16.target.all.bed',\n"
+     ]
+    }
+   ],
    "source": [
-    "def write_fasta_from_genome_and_chip_data(genome_paths = [r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.1.fa',\n",
+    "import os\n",
+    "\n",
+    "def get_sequences(genome_paths = [r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.1.fa',\n",
     "                                                                r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.2.fa',\n",
     "                                                                r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.3.fa',\n",
     "                                                                r'database\\Arabidopsis_thaliana.TAIR10.dna.chromosome.4.fa',\n",
@@ -154,29 +167,74 @@
     "        sequences.append(record)\n",
     "\n",
     "    # Write to FASTA file\n",
-    "    SeqIO.write(sequences, \"AGL16_peak_seq.fasta\", \"fasta\")\n",
+    "    SeqIO.write(sequences, os.path.basename(bed_path)+\".fasta\", \"fasta\")\n",
     "    print(f\"Extracted {len(sequences)} sequences and saved to FASTA file.\")\n",
     "    return sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3c8c490a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "nucleotide_indexes = {'a':0, 't':1, 'g':2, 'c':3, 'w': (0,1), 'n': (0,1,2,3)}\n",
+    "\n",
+    "def one_hot_encode(seq):\n",
+    "    oneHotEncode = np.zeros([4,len(seq)])\n",
+    "    for i, n in enumerate(seq):\n",
+    "        oneHotEncode[nucleotide_indexes[n.lower()], i] = 1\n",
+    "    return oneHotEncode\n",
+    "\n",
+    "def generate_dataset(sequences):\n",
+    "    positive_seqs = []\n",
+    "    negative_seqs = []\n",
+    "\n",
+    "    for seq_record in sequences:\n",
+    "        positive_seqs.append(one_hot_encode(str(seq_record.seq)))\n",
+    "        \n",
+    "        seq_list = list(str(seq_record.seq))\n",
+    "        np.random.shuffle(seq_list)\n",
+    "        permuted_seq = ''.join(seq_list)\n",
+    "        negative_seqs.append(one_hot_encode(permuted_seq))\n",
+    "\n",
+    "    positive_labels = np.ones(len(positive_seqs))\n",
+    "    negative_labels = np.zeros(len(negative_seqs))\n",
+    "\n",
+    "    X = positive_seqs + negative_seqs\n",
+    "    y = np.concatenate([positive_labels, negative_labels])\n",
+    "\n",
+    "    indices = np.arange(len(X))\n",
+    "    np.random.shuffle(indices)\n",
+    "    X = [X[i] for i in indices]\n",
+    "    y = y[indices]\n",
+    "\n",
+    "\n",
+    "\n",
+    "    print(f\"Dataset created with {len(positive_seqs)} positive examples and {len(negative_seqs)} negative examples\")\n",
+    "    return X, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fa36a215",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "500"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted 4328 sequences and saved to FASTA file.\n",
+      "Dataset created with 4328 positive examples and 4328 negative examples\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "X, y = generate_dataset(get_sequences())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,10 +253,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0deee400",
+   "id": "350bb653",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "import sklearn as sk\n",
+    "\n",
+    "model = nn.Sequential(nn.Conv2d(in_channels=4, out_channels=3, kernel_size=(3, 1), stride=1),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Conv2d(in_channels=4, out_channels=3, kernel_size=(3, 1), stride=1),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Conv2d(in_channels=4, out_channels=3, kernel_size=(3, 1), stride=1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,67 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dac72281-efc0-440d-bc0b-ecd991a7468d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dataset</th>\n",
-       "      <th>Hyperparameter</th>\n",
-       "      <th>Value</th>\n",
-       "      <th>Accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AGL16</td>\n",
-       "      <td>Dropout</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GRF1</td>\n",
-       "      <td>Dropout</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>0.90</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Dataset Hyperparameter  Value  Accuracy\n",
-       "0   AGL16        Dropout    0.2      0.92\n",
-       "1    GRF1        Dropout    0.3      0.90"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
